--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 10px;
 }
 
 .container h1 {
@@ -22,21 +23,20 @@
     width: 100px;
 }
 
-.form {
-    max-width: 500px;
-}
-
 .form input, .form select {
+    font-size: 16px;
     color: white;
     height: 40px;
     border-radius: 5px;
-    margin: 5px;
-    padding: 5px;
+    margin: 5px 0;
+    padding: 10px;
     outline: none;
     box-shadow: none;
+    box-sizing: content-box;
 }
 
-.form input:enabled {
+
+.form input:enabled, .form select:enabled {
     border-color: #03FA6E;
 }
 
@@ -44,10 +44,22 @@
     color: white;
 }
 
-#cep, #adress {
-    width: 100%;
+#cep, #address {
+    width: 96%;
 }
 
-#region {
-    width: 100px;
+.btn-limpar {
+    border-radius: 5px;
+    height: 40px;
+    width: 100%;
+    background-color: #03FA6E;
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.btn-limpar:focus {
+    background-color: black;
+    color: #03FA6E;
 }
